# structured-harness-eval

./: .gitignore  GUIDE.md  METRICS.md  PLAN.md  README.md  accounting.md  pyproject.toml  robo.yml
.github/: settings.yml
.github/workflows/: smoke-test.yml  unit-test.yml
configs/: aa_lcr_ablation.yaml  aa_lcr_full.yaml  aa_lcr_gemini_3_flash_full.yaml  aa_lcr_gemini_3_pro_full.yaml  aa_lcr_gemini_full.yaml  aa_lcr_gemini_subset.yaml  aa_lcr_subset.yaml  smoke_test.yaml  smoke_test_re_eval.yaml
configs/gemini-cli/: aa_lcr_gemini_25_flash_full.yaml  aa_lcr_gemini_25_pro_full.yaml  aa_lcr_gemini_3_flash_full.yaml  aa_lcr_gemini_3_pro_full.yaml  aa_lcr_gemini_subset.yaml
examples/: README.md
glass/: cli.py  pipeline.py  tui.py
glass/analysis/: error_taxonomy.py
glass/config/: schema.py
glass/datasets/: aalcr.py  base.py  finch.py  registry.py
glass/human_eval/: agreement.py  exporter.py  importer.py
glass/judges/: base.py  llm.py  prompts.py
glass/metrics/: __init__.py  (+20 more)
implementation/: 00_setup.md  01_scaffolding.md  02_dataset_and_templates.md  03_systems.md  04_metrics_and_judges.md  05_orchestration.md  06_statistics_and_reporting.md  07_verification.md  08_verification_and_improvements.md
memory/: MEMORY.md
research_harness/: RESEARCH.md  __init__.py  cli.py  compare_runs.py  llm_utils.py  naming.py  schema.py  synthesizer.py  vision_interpreter.py  visualizer.py
scripts/: download_aalcr.py  download_finch.py  explore_finch.py  plot_results.py  run_at_defined_time.sh
tests/: conftest.py  test_dataset.py  test_error_analysis.py  test_finch_dataset.py  test_finch_exploration.py  test_human_eval.py  test_metrics.py  test_metrics_edge_cases.py  test_pipeline.py  test_rh_compare.py  test_rh_synthesizer.py  test_rh_vision.py  test_rh_visualizer.py  test_scaffolding.py  test_statistics.py  test_statistics_extended.py  test_systems.py  test_systems_extended.py
(+864 files in other folders)
