[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "glass"
version = "0.1.0"
description = "Global Long-context Agent Scoring System"
authors = [
    {name = "Vu, N.", email = "anhvu.nguyenlam@gmail.com"},
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml",
    "pandas",
    "numpy",
    "scipy",
    "datasets",
    "nltk",
    "click",
    "rich",
    "anthropic",
    "google-generativeai",
    "openai",
    "tabulate",
    "python-dotenv",
    "huggingface_hub",
    "tenacity",
    "litellm",
    "seaborn",
    "matplotlib",
    "rouge-score",
    "bert-score",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.setuptools.packages.find]
include = ["glass*"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::FutureWarning:seaborn.*",
    "ignore::PendingDeprecationWarning:seaborn.*",
    "ignore::PendingDeprecationWarning:matplotlib.*"
]
